fix: specify terraform version

--- a/.github/workflows/pr-tests-terraform.yml
+++ b/.github/workflows/pr-tests-terraform.yml
@@ -14,3 +14,4 @@ jobs:
     uses: entur/gh-workflows/.github/workflows/pr-tests-terraform.yml@main
     with:
       module_dirs: '["./modules/postgresql","./modules/postgresql-replica","examples/minimal_test"]'
+      tf_version: 0.13.2
