--- a/.github/workflows/pr-validation.yml
+++ b/.github/workflows/pr-validation.yml
@@ -3,7 +3,7 @@ name: Call Validate PR
 on:
   pull_request:
     branches:
-      - master
+      - main
     types:
       - opened
       - edited
