--- a/.github/workflows/pr-int-test-terraform.yml
+++ b/.github/workflows/pr-int-test-terraform.yml
@@ -28,19 +28,27 @@ jobs:
           go-version: 1.19
       - uses: hashicorp/setup-terraform@v3
         with:
-          terraform_version: 1.1.0
+          terraform_version: 1.8.5
           terraform_wrapper: false
-      - id: "auth"
-        uses: "google-github-actions/auth@v2"
+      # - id: "auth"
+      #   uses: "google-github-actions/auth@v2"
+      #   with:
+      #     workload_identity_provider: ${{ secrets.PROVIDER_NAME }}
+      #     service_account: ${{ secrets.SA_EMAIL }}
+      # - id: "get-credentials"
+      #   uses: "google-github-actions/get-gke-credentials@v2"
+      #   with:
+      #     project_id: ${{ secrets.CLUSTER_PROJECT_ID }}
+      #     cluster_name: ${{ secrets.CLUSTER_NAME }}
+      #     location: ${{ secrets.CLUSTER_LOCATION }}
+
+      - uses: entur/gha-meta/.github/actions/cloud-auth@v1
         with:
-          workload_identity_provider: ${{ secrets.PROVIDER_NAME }}
-          service_account: ${{ secrets.SA_EMAIL }}
-      - id: "get-credentials"
-        uses: "google-github-actions/get-gke-credentials@v2"
-        with:
-          project_id: ${{ secrets.CLUSTER_PROJECT_ID }}
-          cluster_name: ${{ secrets.CLUSTER_NAME }}
-          location: ${{ secrets.CLUSTER_LOCATION }}
+          environment: dev
+          cloud_provider: ${{ env.GHA_HELM_DEPLOY_CLOUD_PROVIDER }}
+          gcp_workload_identity_provider: ${{ vars.WORKLOAD_IDENTITY_PROVIDER }}
+          gcp_service_account: ${{ vars.SERVICE_ACCOUNT }}
+
       - name: Download Go Modules
         working-directory: test/integration
         run: go mod download
