--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -1,15 +1,14 @@
-name: Call Release Please
-
+name: release
 on:
+  workflow_dispatch:
   push:
     branches:
       - main
 
+permissions:
+  contents: write
+  pull-requests: write
+
 jobs:
-  tf-tests:
-    uses: entur/gh-workflows/.github/workflows/release-please.yml@main
-    with:
-      release_type: terraform-module
-      version_bumped_files: |
-        README.md
-        examples/minimal/main.tf
+  release:
+    uses: entur/gha-meta/.github/workflows/release.yml@v1
