fix: dependabot.yml

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,4 +1,9 @@
 version: 2
+registries:
+  jfrog-artifactory:
+    type: npm-registry
+    url: "https://entur2.jfrog.io/entur2"
+    token: ${{secrets.ARTIFACTORY_AUTH_TOKEN}}
 updates:
 - package-ecosystem: "gomod"
   directory: "/test/integration"
@@ -16,7 +21,52 @@ updates:
     interval: "weekly"
   open-pull-requests-limit: 2
 - package-ecosystem: "terraform"
-  directory: "/"
+  directory: "/examples/minimal"
+  groups:
+    minor-and-patch:
+      applies-to: version-updates
+      update-types:
+      - "minor"
+      - "patch"
+    major-updates:
+      applies-to: version-updates
+      update-types:
+      - "major"
+  schedule:
+    interval: "weekly"
+  open-pull-requests-limit: 2
+- package-ecosystem: "terraform"
+  directory: "/examples/minimal_test"
+  groups:
+    minor-and-patch:
+      applies-to: version-updates
+      update-types:
+      - "minor"
+      - "patch"
+    major-updates:
+      applies-to: version-updates
+      update-types:
+      - "major"
+  schedule:
+    interval: "weekly"
+  open-pull-requests-limit: 2
+- package-ecosystem: "terraform"
+  directory: "/modules/postgresql"
+  groups:
+    minor-and-patch:
+      applies-to: version-updates
+      update-types:
+      - "minor"
+      - "patch"
+    major-updates:
+      applies-to: version-updates
+      update-types:
+      - "major"
+  schedule:
+    interval: "weekly"
+  open-pull-requests-limit: 2
+- package-ecosystem: "terraform"
+  directory: "/modules/postgresql-replica"
   groups:
     minor-and-patch:
       applies-to: version-updates
