--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,82 @@
-.tool-versions
+# Created by https://www.toptal.com/developers/gitignore/api/terraform,macos,windows,linux,go
+# Edit at https://www.toptal.com/developers/gitignore?templates=terraform,macos,windows,linux,go
+
+### Go ###
+# If you prefer the allow list template instead of the deny list, see community template:
+# https://github.com/github/gitignore/blob/main/community/Golang/Go.AllowList.gitignore
+#
+# Binaries for programs and plugins
+*.exe
+*.exe~
+*.dll
+*.so
+*.dylib
+
+# Test binary, built with `go test -c`
+*.test
+
+# Output of the go coverage tool, specifically when used with LiteIDE
+*.out
+
+# Dependency directories (remove the comment below to include it)
+# vendor/
+
+# Go workspace file
+go.work
+
+### Linux ###
+*~
+
+# temporary files which can be created if a process still has a handle open of a deleted file
+.fuse_hidden*
+
+# KDE directory preferences
+.directory
+
+# Linux trash folder which might appear on any partition or disk
+.Trash-*
+
+# .nfs files are created when an open file is removed but is still being accessed
+.nfs*
+
+### macOS ###
+# General
+.DS_Store
+.AppleDouble
+.LSOverride
+
+# Icon must end with two \r
+Icon
+
+
+# Thumbnails
+._*
+
+# Files that might appear in the root of a volume
+.DocumentRevisions-V100
+.fseventsd
+.Spotlight-V100
+.TemporaryItems
+.Trashes
+.VolumeIcon.icns
+.com.apple.timemachine.donotpresent
+
+# Directories potentially created on remote AFP share
+.AppleDB
+.AppleDesktop
+Network Trash Folder
+Temporary Items
+.apdisk
+
+### macOS Patch ###
+# iCloud generated files
+*.icloud
+
+### Terraform ###
 # Local .terraform directories
 **/.terraform/*
+
+.terraform.lock.hcl
 
 # .tfstate files
 *.tfstate
@@ -8,19 +84,56 @@
 
 # Crash log files
 crash.log
+crash.*.log
 
-# Ignore override files
+# Exclude all .tfvars files, which are likely to contain sensitive data, such as
+# password, private keys, and other secrets. These should not be part of version
+# control as they are data points which are potentially sensitive and subject
+# to change depending on the environment.
+*.tfvars
+*.tfvars.json
+
+# Ignore override files as they are usually used to override resources locally and so
+# are not checked in
 override.tf
 override.tf.json
 *_override.tf
 *_override.tf.json
 
+# Include override files you do wish to add to version control using negated pattern
+# !example_override.tf
+
 # Include tfplan files to ignore the plan output of command: terraform plan -out=tfplan
-tfplan
+# example: *tfplan*
 
-# .auto.var files
-*.auto.tfvars
+# Ignore CLI configuration files
+.terraformrc
+terraform.rc
 
-# Pycharm
-.idea
-.terraform.lock.hcl
+### Windows ###
+# Windows thumbnail cache files
+Thumbs.db
+Thumbs.db:encryptable
+ehthumbs.db
+ehthumbs_vista.db
+
+# Dump file
+*.stackdump
+
+# Folder config file
+[Dd]esktop.ini
+
+# Recycle Bin used on file shares
+$RECYCLE.BIN/
+
+# Windows Installer files
+*.cab
+*.msi
+*.msix
+*.msm
+*.msp
+
+# Windows shortcuts
+*.lnk
+
+# End of https://www.toptal.com/developers/gitignore/api/terraform,macos,windows,linux,go
