Add support for looking recursively for test files from the working directory

--- a/.github/workflows/pr-int-test-terraform.yml
+++ b/.github/workflows/pr-int-test-terraform.yml
@@ -45,4 +45,5 @@ jobs:
         working-directory: test/integration
         run: go mod download
       - name: Run Go Integration Tests
-        run: go test -tags=integration ./test/integration/... -timeout 30m
+        working-directory: test/integration
+        run: go test -tags=integration ./... -timeout 30m
