Modify name of integration test step in Github workflow
Co-authored-by: Glenn Terjesen <48587132+Glenn-Terjesen@users.noreply.github.com>

--- a/.github/workflows/pr-int-test-terraform.yml
+++ b/.github/workflows/pr-int-test-terraform.yml
@@ -44,6 +44,6 @@ jobs:
       - name: Download Go Modules
         working-directory: test/integration
         run: go mod download
-      - name: Run Go Integration Tests
+      - name: Run recursive Go integration tests
         working-directory: test/integration
         run: go test -tags=integration ./... -timeout 30m
