Fix incorrect reference to minimal_test in pr-tests-terraform

--- a/.github/workflows/pr-tests-terraform.yml
+++ b/.github/workflows/pr-tests-terraform.yml
@@ -26,5 +26,5 @@ jobs:
     name: Terraform Lint Examples
     uses: entur/gha-terraform/.github/workflows/lint.yml@v1
     with:
-      directory: "./examples/minimal_test"
+      directory: "./test/fixtures/minimal_test"
       version: 1.8.5
