--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -16,6 +16,21 @@ updates:
     timezone: "Europe/Oslo"
     day: "monday"
   open-pull-requests-limit: 2
+- package-ecosystem: "github-actions"
+  directories:
+    - /
+  groups:
+    minor-and-patch:
+      applies-to: version-updates
+      update-types:
+      - "minor"
+      - "patch"
+  schedule:
+    interval: "weekly"
+    time: "09:00"
+    timezone: "Europe/Oslo"
+    day: "monday"
+  open-pull-requests-limit: 2
 - package-ecosystem: terraform
   directories:
   - /examples/minimal
