--- a/.github/workflows/pr-int-test-terraform.yml
+++ b/.github/workflows/pr-int-test-terraform.yml
@@ -26,7 +26,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-go@v5
         with:
-          go-version: "1.22"
+          go-version-file: "test/integration/go.mod"
       - uses: hashicorp/setup-terraform@v3
         with:
           terraform_version: 1.8.5
