chore: update schema to GitHubActions [ci skip]

--- a/.entur/github-terraform-google-sql-db.yaml
+++ b/.entur/github-terraform-google-sql-db.yaml
@@ -1,5 +1,5 @@
 apiVersion: orchestrator.entur.io/github/v1
-kind: Repository
+kind: GitHubActions
 metadata:
   id: terraform-google-sql-db
   trigger: 1755517059
